@@ -1,60 +1,41 @@
+import org.gradle.internal.os.OperatingSystem;
+
 buildscript {
     repositories {
         jcenter()
     }
     dependencies {
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
     }
 }
 
 apply plugin: 'java'
-apply plugin: 'maven'
 apply plugin: 'com.jfrog.bintray'
 apply plugin: 'maven-publish'
 
 group = 'com.jme3'
-version = '2.0.0'
+version = '3.0.2'
 
 compileJava {
     options.encoding = "UTF-8"
     options.incremental = true
-    options.compilerArgs.addAll([
-        "--add-exports",
-        "javafx.graphics/com.sun.javafx.embed=ALL-UNNAMED"
-    ])
-    options.compilerArgs.addAll([
-        "--add-exports",
-        "javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED"
-    ])
-    options.compilerArgs.addAll([
-        "--add-exports",
-        "javafx.graphics/com.sun.javafx.cursor=ALL-UNNAMED"
-    ])
-    options.compilerArgs.addAll([
-        "--add-exports",
-        "javafx.graphics/com.sun.glass.ui=ALL-UNNAMED"
-    ])
-    options.compilerArgs.addAll([
-        "--add-exports",
-        "javafx.graphics/com.sun.javafx.application=ALL-UNNAMED"
-    ])
 }
 
-sourceCompatibility = 1.10
-targetCompatibility = 1.10
+sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
 
-ext.rlibVersion = "7.0.0"
-ext.bintrayVersion = version
-
-def jme3 = [v: '3.2.0-stable', g: 'org.jmonkeyengine']
+ext {
+    bintrayVersion = version
+    javaFxVersion = "13"
+    jetbrainsAnnotation = "18.0.0"
+    jMonkeyVersion = "3.2.4-stable"
+    rlibVersion = "9.9.0"
+}
 
 repositories {
     mavenCentral()
     mavenLocal()
     jcenter()
-    maven {
-        url "https://jitpack.io"
-    }
     maven {
         url  "https://dl.bintray.com/javasabr/maven"
     }
@@ -67,8 +48,10 @@ publishing {
             groupId group
             artifactId 'jfx'
             version bintrayVersion
-            artifact sourcesJar
-            artifact javadocJar
+            afterEvaluate {
+                artifact sourcesJar
+                artifact javadocJar
+            }
         }
     }
 }
@@ -95,10 +78,28 @@ bintray {
 }
 
 dependencies {
-    compile group: 'org.jetbrains', name: 'annotations', version: '15.0'
-    compile group: 'com.spaceshift', name: 'rlib.common', version: rlibVersion
-    compile "${jme3.g}:jme3-core:${jme3.v}"
-    compile "${jme3.g}:jme3-lwjgl3:${jme3.v}"
+    def targetArch = project.hasProperty('targetArch') ? project.property("targetArch") : 'x64'
+
+    def osName = ""
+    if (OperatingSystem.current().isLinux()) {
+        osName = "linux"
+    } else if (OperatingSystem.current().isMacOsX()) {
+        osName = "mac"
+    } else if (OperatingSystem.current().isWindows()) {
+        osName = "win"
+    }
+
+    implementation  "org.jetbrains:annotations:$jetbrainsAnnotation"
+    implementation  "com.spaceshift:rlib.common:$rlibVersion"
+    implementation  "com.spaceshift:rlib.logger.impl:$rlibVersion"
+    implementation  "org.jmonkeyengine:jme3-core:$jMonkeyVersion"
+    implementation  "org.jmonkeyengine:jme3-lwjgl3:$jMonkeyVersion"
+
+    if (targetArch == "x64" || targetArch == "x86") {
+        implementation "org.openjfx:javafx-base:$javaFxVersion:${osName}"
+        implementation "org.openjfx:javafx-controls:$javaFxVersion:${osName}"
+        implementation "org.openjfx:javafx-graphics:$javaFxVersion:${osName}"
+    }
 }
 
 javadoc {
@@ -115,6 +116,6 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
     from javadoc.destinationDir
 }
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '4.7'
+wrapper {
+    gradleVersion = '6.1.1'
 }
